# InventarWerk

./: Dockerfile  Logo.pdn  README.md  entrypoint.sh
.github/: CODEOWNERS  (+1 more)
backend/: .gitignore  Cargo.toml  README.md  diesel.toml  reset_db.sh  run_development.sh  run_production.sh
backend/inv_rep/: Cargo.toml
backend/inv_rep/src/: lib.rs  model.rs
backend/inv_rep/src/repos/: inventory_repository.rs  item_preset_repository.rs  mod.rs  user_repository.rs
backend/inventarwerk_api/: .gitignore  Cargo.toml
backend/inventarwerk_api/src/: last_changes_map_macro.rs  locked_macros.rs  main.rs
backend/inventarwerk_api/src/routers/: account_router.rs  backup_router.rs  inventory_router.rs  item_preset_router.rs  last_changes_router.rs  mod.rs  router_utility.rs
backend/last_changes_api/: Cargo.toml
backend/last_changes_api/src/: main.rs
backend/last_changes_api/src/routers/: last_changes_router.rs  mod.rs
backend/migrations/2024-12-17-120244_create_posts/: down.sql
backend/migrations/2024-12-17-120244_initial_setup/: down.sql  up.sql
backend/org_backend/: Cargo.toml  README.md
backend/org_backend/migrations/2024-12-17-120244_initial_setup/: down.sql  up.sql
backend/org_backend/src/: frontend_model.rs  last_changes_map_macro.rs  locked_macros.rs  main.rs  model.rs
backend/org_backend/src/controller/: inventory_controller.rs  item_preset_controller.rs
backend/org_backend/src/routers/: account_router.rs  inventory_router.rs  item_preset_router.rs  last_changes_router.rs  mod.rs  router_utility.rs
backend/repositories/: Cargo.toml
backend/repositories/migrations/: 20250218093748_init.sql  20251120192650_zauberwerk.sql  20260103_inventory_change_triggers.sql
backend/repositories/src/: lib.rs  model.rs  model_inventarwerk.rs  model_zauberwerk.rs
backend/repositories/src/repos/: inventory_repository.rs  item_preset_repository.rs  mod.rs  user_repository.rs
backend/src/: dbmod.rs  frontend_model.rs  last_changes_map_macro.rs  main.rs  model.rs  router.rs  schema.rs
backend/src/controller/: InventoryController.rs  account_controller.rs  inventory_controller.rs  item_preset_controller.rs  lock_controller.rs  mod.rs
backend/src/routers/: account_router.rs  inventoryRouter.rs  inventory_router.rs  item_preset_router.rs  item_router.rs  last_changes_router.rs  mod.rs  note_router.rs  test.rs
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
backend/zauberwerk_api/: Cargo.toml
backend/zauberwerk_api/src/: main.rs
(+60 files in other folders)
