[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.1"
serde = {version="1.0.216", features=["derive"]}
reqwest = {version="0.12.9", features=["json"]}
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
lazy_static = "1.4"
rocket_cors = "0.6.0"


[features]
dev = []
dev-deploy = []