[package]
name = "last_changes_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
dotenvy = "0.15.7"
serde = {version="1.0.216", features=["derive"]}
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9.0"
rocket_cors = "0.6.0"
utils = {path = "../utils"}
repos = {path = "../repositories"}
anyhow = { version="1.0.96"}
utoipa = {version="5.3.1"}
utoipa-swagger-ui = {version="9", features = ["rocket"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
serde_json = "1.0"

[features]
dev = []
