[package]
name = "repos"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { version="0.3.37", features=["serde", "formatting"]}
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "time"] }
uuid = { version="1.13.1", features=["v4"] }
anyhow = { version="1.0.96"}
tokio = { version = "1", features = ["full"] }
serde = {version="1.0.216", features=["derive"]}
utoipa = {version="5.3.1"}