[package]
name = "zauberwerk_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
dotenvy = "0.15.7"
serde = {version="1.0.216", features=["derive"]}
reqwest = {version="0.12.9", features=["json"]}
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9.0"
lazy_static = "1.4"
rocket_cors = "0.6.0"
chrono = { version="0.4.39", features=["serde"]}
repos = {path = "../repositories"}
rocket-errors = "0.1.0"
anyhow = { version="1.0.96"}
utoipa = {version="5.3.1"}
utoipa-swagger-ui = {version="9", features = ["rocket"]}
utils = {path = "../utils"}

[features]
dev = []